--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "url": "git://github.com/jenius/rupture.git"
   },
   "devDependencies": {
-    "coffee-script": "*",
-    "css-parse": "*",
-    "mocha": "*",
-    "should": "^4.0.4",
-    "stylus": "*"
+    "chai": "1.x",
+    "coffee-script": "1.8.x",
+    "css-parse": "2.x",
+    "mocha": "2.x",
+    "stylus": "0.49.x"
   },
   "main": "index.js",
   "scripts": {
